# progettolab-memory

./: Attivita.cpp  Attivita.h  Attività.cpp  Attività.h  CMakeLists.txt  README.md  Registro.cpp  Registro.h  main.cpp
test/: CMakeLists.txt  tests.cpp
